<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="268dp"
        android:layout_height="58dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/register_box"
        android:elevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/date_spinner"
            android:layout_width="198dp"
            android:layout_height="26dp"
            android:layout_marginStart="78dp"
            android:layout_marginEnd="78dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:layout_marginTop="88dp"
        android:layout_marginBottom="10dp"
        android:columnCount="2"
        android:padding="18dp"
        android:rowCount="2"
        app:layout_constraintBottom_toTopOf="@+id/current_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/summaryTab"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/register_box"
            android:elevation="10dp">

            <TextView
                android:id="@+id/summary_tab_summaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/summary"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/summaryTab"
                app:layout_constraintStart_toStartOf="@+id/summaryTab"
                app:layout_constraintTop_toTopOf="@+id/summaryTab" />

            <TextView
                android:id="@+id/summary_tab_revenueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="80dp"
                android:text="@string/revenue"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/summaryTab"
                app:layout_constraintTop_toTopOf="@+id/summaryTab" />

            <TextView
                android:id="@+id/summary_tab_spendingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="150dp"
                android:text="@string/spending"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/summaryTab"
                app:layout_constraintTop_toTopOf="@+id/summaryTab" />

            <TextView
                android:id="@+id/summary_tab_revenue_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="80dp"
                android:text="TextView"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/summary_tab_revenueText"
                app:layout_constraintTop_toTopOf="@+id/summaryTab" />

            <TextView
                android:id="@+id/summary_tab_spending_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="150dp"
                android:text="TextView"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/summary_tab_spendingText"
                app:layout_constraintTop_toTopOf="@+id/summaryTab" />

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/horizontalBarChart"
                android:layout_width="231dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/summaryTab"
                app:layout_constraintEnd_toEndOf="@+id/summaryTab"
                app:layout_constraintStart_toStartOf="@+id/summaryTab" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/spendingTab"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/register_box"
            android:elevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/spending"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/spendingTab"
                app:layout_constraintStart_toStartOf="@+id/spendingTab"
                app:layout_constraintTop_toTopOf="@+id/spendingTab" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/spending_tab_chart"
                android:layout_width="231dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/spendingTab"
                app:layout_constraintEnd_toEndOf="@+id/spendingTab"
                app:layout_constraintStart_toStartOf="@+id/spendingTab" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/budgetTab"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/register_box"
            android:elevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/budgets"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/budgetTab"
                app:layout_constraintStart_toStartOf="@+id/budgetTab"
                app:layout_constraintTop_toTopOf="@+id/budgetTab" />

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/budget_tab_chart"
                android:layout_width="231dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/budgetTab"
                app:layout_constraintEnd_toEndOf="@+id/budgetTab"
                app:layout_constraintStart_toStartOf="@+id/budgetTab" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/accountsTab"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/register_box"
            android:elevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/accounts"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/accountsTab"
                app:layout_constraintStart_toStartOf="@+id/accountsTab"
                app:layout_constraintTop_toTopOf="@+id/accountsTab" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:text="@string/top_account"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/accountsTab"
                app:layout_constraintStart_toStartOf="@+id/accountsTab"
                app:layout_constraintTop_toTopOf="@+id/accountsTab" />

            <TextView
                android:id="@+id/accounts_tab_account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:text="account name"
                android:textSize="20sp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/accountsTab"
                app:layout_constraintStart_toStartOf="@+id/accountsTab"
                app:layout_constraintTop_toTopOf="@+id/accountsTab" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:text="@string/account_value"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/accountsTab"
                app:layout_constraintStart_toStartOf="@+id/accountsTab"
                app:layout_constraintTop_toTopOf="@+id/accountsTab" />

            <TextView
                android:id="@+id/accounts_tab_account_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="170dp"
                android:text="value"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/accountsTab"
                app:layout_constraintStart_toStartOf="@+id/accountsTab"
                app:layout_constraintTop_toTopOf="@+id/accountsTab" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </GridLayout>

    <TextView
        android:id="@+id/current_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="16dp"
        android:text="@string/current_balance"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <TextView
        android:id="@+id/current_balance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="16dp"
        android:text="10000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/current_balance" />


</androidx.constraintlayout.widget.ConstraintLayout>